--- a/uitextfieldobscura/uitextfieldobscura/Base.lproj/Main.storyboard
+++ b/uitextfieldobscura/uitextfieldobscura/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,11 +13,62 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="uitextfieldobscura" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="37V-r5-IOL">
+                                <rect key="frame" x="0.0" y="44" width="414" height="448"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Mc6-zu-FSR">
+                                        <rect key="frame" x="143" y="160" width="128" height="128"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Mc6-zu-FSR" firstAttribute="centerX" secondItem="37V-r5-IOL" secondAttribute="centerX" id="832-Nd-RRN"/>
+                                    <constraint firstItem="Mc6-zu-FSR" firstAttribute="centerY" secondItem="37V-r5-IOL" secondAttribute="centerY" id="ZUN-Wz-q5m"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g4b-rU-gWu">
+                                <rect key="frame" x="0.0" y="414" width="414" height="448"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fgU-vt-Rwh">
+                                        <rect key="frame" x="69" y="213" width="276" height="22"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nPi-hD-oF4">
+                                        <rect key="frame" x="69" y="255" width="276" height="22"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="fgU-vt-Rwh" firstAttribute="centerY" secondItem="g4b-rU-gWu" secondAttribute="centerY" id="AcO-tI-NyY"/>
+                                    <constraint firstItem="nPi-hD-oF4" firstAttribute="centerX" secondItem="g4b-rU-gWu" secondAttribute="centerX" id="Df5-Yg-rcU"/>
+                                    <constraint firstItem="fgU-vt-Rwh" firstAttribute="width" secondItem="g4b-rU-gWu" secondAttribute="width" multiplier="0.666667" id="G3F-Oe-H2x"/>
+                                    <constraint firstItem="fgU-vt-Rwh" firstAttribute="centerX" secondItem="g4b-rU-gWu" secondAttribute="centerX" id="XKv-UH-Sms"/>
+                                    <constraint firstItem="nPi-hD-oF4" firstAttribute="top" secondItem="fgU-vt-Rwh" secondAttribute="bottom" constant="20" id="ahW-xz-nD6"/>
+                                    <constraint firstItem="nPi-hD-oF4" firstAttribute="width" secondItem="g4b-rU-gWu" secondAttribute="width" multiplier="0.666667" id="zrj-mf-ude"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="37V-r5-IOL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="B3C-vd-jTw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="37V-r5-IOL" secondAttribute="trailing" id="LDi-LF-PDu"/>
+                            <constraint firstItem="g4b-rU-gWu" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="RXK-At-nom"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="g4b-rU-gWu" secondAttribute="bottom" id="ZnL-0e-Pdg"/>
+                            <constraint firstItem="37V-r5-IOL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iSU-9g-qPm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="g4b-rU-gWu" secondAttribute="trailing" id="iXV-KR-DLl"/>
+                            <constraint firstItem="g4b-rU-gWu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="k2W-1D-Kd6"/>
+                            <constraint firstItem="37V-r5-IOL" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="uI2-7j-oCd"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -21,4 +76,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="128" height="128"/>
+    </resources>
 </document>
