--- a/uitextfieldobscura/uitextfieldobscura/Base.lproj/Main.storyboard
+++ b/uitextfieldobscura/uitextfieldobscura/Base.lproj/Main.storyboard
@@ -18,59 +18,93 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="37V-r5-IOL">
-                                <rect key="frame" x="0.0" y="44" width="414" height="448"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hr4-5r-Jph">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Mc6-zu-FSR">
-                                        <rect key="frame" x="143" y="160" width="128" height="128"/>
-                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LgY-7c-EOr" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="37V-r5-IOL">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="448"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Mc6-zu-FSR">
+                                                        <rect key="frame" x="143" y="160" width="128" height="128"/>
+                                                    </imageView>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="Mc6-zu-FSR" firstAttribute="centerX" secondItem="37V-r5-IOL" secondAttribute="centerX" id="832-Nd-RRN"/>
+                                                    <constraint firstItem="Mc6-zu-FSR" firstAttribute="centerY" secondItem="37V-r5-IOL" secondAttribute="centerY" id="ZUN-Wz-q5m"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g4b-rU-gWu">
+                                                <rect key="frame" x="0.0" y="448" width="414" height="448"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fgU-vt-Rwh">
+                                                        <rect key="frame" x="69" y="213" width="276" height="22"/>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="BYZ-38-t0r" id="vQ8-sh-JLR"/>
+                                                        </connections>
+                                                    </textField>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nPi-hD-oF4">
+                                                        <rect key="frame" x="69" y="255" width="276" height="22"/>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="BYZ-38-t0r" id="uhM-uQ-HpN"/>
+                                                        </connections>
+                                                    </textField>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="fgU-vt-Rwh" firstAttribute="centerY" secondItem="g4b-rU-gWu" secondAttribute="centerY" id="AcO-tI-NyY"/>
+                                                    <constraint firstItem="nPi-hD-oF4" firstAttribute="centerX" secondItem="g4b-rU-gWu" secondAttribute="centerX" id="Df5-Yg-rcU"/>
+                                                    <constraint firstItem="fgU-vt-Rwh" firstAttribute="width" secondItem="g4b-rU-gWu" secondAttribute="width" multiplier="0.666667" id="G3F-Oe-H2x"/>
+                                                    <constraint firstItem="fgU-vt-Rwh" firstAttribute="centerX" secondItem="g4b-rU-gWu" secondAttribute="centerX" id="XKv-UH-Sms"/>
+                                                    <constraint firstItem="nPi-hD-oF4" firstAttribute="top" secondItem="fgU-vt-Rwh" secondAttribute="bottom" constant="20" id="ahW-xz-nD6"/>
+                                                    <constraint firstItem="nPi-hD-oF4" firstAttribute="width" secondItem="g4b-rU-gWu" secondAttribute="width" multiplier="0.666667" id="zrj-mf-ude"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="37V-r5-IOL" firstAttribute="top" secondItem="LgY-7c-EOr" secondAttribute="top" id="1u1-vk-JpA"/>
+                                            <constraint firstAttribute="trailing" secondItem="g4b-rU-gWu" secondAttribute="trailing" id="9ry-Bj-NAR"/>
+                                            <constraint firstItem="g4b-rU-gWu" firstAttribute="leading" secondItem="LgY-7c-EOr" secondAttribute="leading" id="A7x-Dx-ufZ"/>
+                                            <constraint firstItem="g4b-rU-gWu" firstAttribute="height" secondItem="LgY-7c-EOr" secondAttribute="height" multiplier="0.5" id="C0r-46-0Sm"/>
+                                            <constraint firstAttribute="trailing" secondItem="37V-r5-IOL" secondAttribute="trailing" id="Pp7-Lv-oPU"/>
+                                            <constraint firstItem="37V-r5-IOL" firstAttribute="leading" secondItem="LgY-7c-EOr" secondAttribute="leading" id="V9V-F4-To9"/>
+                                            <constraint firstAttribute="bottom" secondItem="g4b-rU-gWu" secondAttribute="bottom" id="XVA-hN-6UO"/>
+                                            <constraint firstItem="37V-r5-IOL" firstAttribute="height" secondItem="LgY-7c-EOr" secondAttribute="height" multiplier="0.5" id="wf3-3F-nbd"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="Mc6-zu-FSR" firstAttribute="centerX" secondItem="37V-r5-IOL" secondAttribute="centerX" id="832-Nd-RRN"/>
-                                    <constraint firstItem="Mc6-zu-FSR" firstAttribute="centerY" secondItem="37V-r5-IOL" secondAttribute="centerY" id="ZUN-Wz-q5m"/>
+                                    <constraint firstItem="LgY-7c-EOr" firstAttribute="leading" secondItem="Hr4-5r-Jph" secondAttribute="leading" id="Dwn-au-mcD"/>
+                                    <constraint firstAttribute="trailing" secondItem="LgY-7c-EOr" secondAttribute="trailing" id="RKn-Yi-jqH"/>
+                                    <constraint firstItem="LgY-7c-EOr" firstAttribute="top" secondItem="Hr4-5r-Jph" secondAttribute="top" id="oNG-Wi-zYs"/>
+                                    <constraint firstAttribute="bottom" secondItem="LgY-7c-EOr" secondAttribute="bottom" id="s2Y-IP-oz4"/>
                                 </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g4b-rU-gWu">
-                                <rect key="frame" x="0.0" y="414" width="414" height="448"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fgU-vt-Rwh">
-                                        <rect key="frame" x="69" y="213" width="276" height="22"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nPi-hD-oF4">
-                                        <rect key="frame" x="69" y="255" width="276" height="22"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="fgU-vt-Rwh" firstAttribute="centerY" secondItem="g4b-rU-gWu" secondAttribute="centerY" id="AcO-tI-NyY"/>
-                                    <constraint firstItem="nPi-hD-oF4" firstAttribute="centerX" secondItem="g4b-rU-gWu" secondAttribute="centerX" id="Df5-Yg-rcU"/>
-                                    <constraint firstItem="fgU-vt-Rwh" firstAttribute="width" secondItem="g4b-rU-gWu" secondAttribute="width" multiplier="0.666667" id="G3F-Oe-H2x"/>
-                                    <constraint firstItem="fgU-vt-Rwh" firstAttribute="centerX" secondItem="g4b-rU-gWu" secondAttribute="centerX" id="XKv-UH-Sms"/>
-                                    <constraint firstItem="nPi-hD-oF4" firstAttribute="top" secondItem="fgU-vt-Rwh" secondAttribute="bottom" constant="20" id="ahW-xz-nD6"/>
-                                    <constraint firstItem="nPi-hD-oF4" firstAttribute="width" secondItem="g4b-rU-gWu" secondAttribute="width" multiplier="0.666667" id="zrj-mf-ude"/>
-                                </constraints>
-                            </view>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="37V-r5-IOL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="B3C-vd-jTw"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="37V-r5-IOL" secondAttribute="trailing" id="LDi-LF-PDu"/>
-                            <constraint firstItem="g4b-rU-gWu" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="RXK-At-nom"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="g4b-rU-gWu" secondAttribute="bottom" id="ZnL-0e-Pdg"/>
-                            <constraint firstItem="37V-r5-IOL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iSU-9g-qPm"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="g4b-rU-gWu" secondAttribute="trailing" id="iXV-KR-DLl"/>
-                            <constraint firstItem="g4b-rU-gWu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="k2W-1D-Kd6"/>
-                            <constraint firstItem="37V-r5-IOL" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="uI2-7j-oCd"/>
+                            <constraint firstItem="Hr4-5r-Jph" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1Aq-fy-2X5"/>
+                            <constraint firstItem="Hr4-5r-Jph" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="KTc-dv-xQc"/>
+                            <constraint firstAttribute="bottom" secondItem="Hr4-5r-Jph" secondAttribute="bottom" id="O1y-t1-ak3"/>
+                            <constraint firstItem="LgY-7c-EOr" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="OuL-lU-RuV"/>
+                            <constraint firstAttribute="trailing" secondItem="Hr4-5r-Jph" secondAttribute="trailing" id="g0w-tc-zeo"/>
+                            <constraint firstItem="LgY-7c-EOr" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" priority="250" id="gON-1a-vWv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="scrollViewBottomConstraint" destination="O1y-t1-ak3" id="xoI-kl-oD6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
